--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,16 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.example.dllo.testdemo.MainActivity">
+    android:orientation="vertical"
+   >
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Hello World!" />
-</RelativeLayout>
+    <android.support.v4.view.ViewPager
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:id="@+id/main_kr_vp"
+        android:layout_weight="1"
+        ></android.support.v4.view.ViewPager>
+    <android.support.design.widget.TabLayout
+        android:id="@+id/main_kr_tab"
+        android:layout_width="match_parent"
+        android:layout_height="60dp"
+        app:tabTextColor="#babab2"
+        app:tabSelectedTextColor="#2dba21"
+        app:tabIndicatorColor="#ced6c2"
+        app:tabTextAppearance="@style/Theme.AppCompat"
+        ></android.support.design.widget.TabLayout>
+
+
+</LinearLayout>
